RentalService - working, problem with multiply records