@@ -2,17 +2,17 @@ package com.library.webapp;
 
 import com.library.webapp.model.Book;
 import com.library.webapp.model.Person;
+import com.library.webapp.model.Rental;
 import com.library.webapp.repository.BookRepository;
 import com.library.webapp.repository.PersonRepository;
+import com.library.webapp.repository.RentalRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.boot.autoconfigure.domain.EntityScan;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Arrays;
 
 @SpringBootApplication
 public class WebappApplication implements CommandLineRunner {
@@ -22,6 +22,9 @@ public class WebappApplication implements CommandLineRunner {
 
 	@Autowired
 	private BookRepository bookRepository;
+
+	@Autowired
+	private RentalRepository rentalRepository;
 
 	public static void main(String[] args) {
 		SpringApplication.run(WebappApplication.class, args);
@@ -34,8 +37,12 @@ public class WebappApplication implements CommandLineRunner {
 		Person person1 = new Person("Stanisław", "Kowalski", "Międzyrzecze Górne", LocalDateTime.of(2021,10,21,10,20,00));
 		Person person2 = new Person("Aleksandra", "Nowicka", "Zalesie", LocalDateTime.of(2021,10,22,15,22,45));
 
-		bookRepository.saveAll(List.of(book1,book2));
-		personRepository.saveAll(List.of(person1,person2));
+		Rental rental1 = new Rental(book1, person1, LocalDateTime.now());
+		Rental rental2 = new Rental(book2, person2, LocalDateTime.now());
+
+		bookRepository.saveAll(Arrays.asList(book1, book2));
+		personRepository.saveAll(Arrays.asList(person1, person2));
+		rentalRepository.saveAll(Arrays.asList(rental1, rental2));
 	}
 
 
